@@ -32,6 +32,26 @@ public class VueloService {
     @org.springframework.context.annotation.Lazy
     private com.tasfb2b.planificador.service.SimulationService simulationService;
 
+    @org.springframework.beans.factory.annotation.Autowired
+    @org.springframework.context.annotation.Lazy
+    private com.tasfb2b.planificador.service.SimulationProgressHolder progressHolder;
+
+    private int getCurrentMinute() {
+        if (progressHolder != null) {
+            List<String> sessions = progressHolder.getAllSessionIds();
+            if (!sessions.isEmpty()) {
+                var state = progressHolder.get(sessions.get(0));
+                if (state != null && state.getCurrentEpochTime() != null) {
+                    java.time.ZonedDateTime simTime = java.time.Instant.ofEpochMilli(state.getCurrentEpochTime())
+                            .atZone(java.time.ZoneOffset.UTC);
+                    return simTime.getHour() * 60 + simTime.getMinute();
+                }
+            }
+        }
+        java.time.ZonedDateTime now = java.time.ZonedDateTime.now(java.time.ZoneOffset.UTC);
+        return now.getHour() * 60 + now.getMinute();
+    }
+
     public VueloResponse crear(VueloRequest request) {
         Map<String, Aeropuerto> aeropuertoCache = aeropuertoRepo.findAll()
                 .stream()
@@ -39,6 +59,13 @@ public class VueloService {
 
         Aeropuerto origen = aeropuertoCache.get(request.origenIcao());
         Aeropuerto destino = aeropuertoCache.get(request.destinoIcao());
+
+        if (origen == null) {
+            throw new AeropuertoNotFoundException(request.origenIcao());
+        }
+        if (destino == null) {
+            throw new AeropuertoNotFoundException(request.destinoIcao());
+        }
 
         boolean intercontinental = !origen.getContinent().equals(destino.getContinent());
 
@@ -53,6 +80,7 @@ public class VueloService {
                 .arrivalMinute(arrUtc)
                 .intercontinental(intercontinental)
                 .cancelled(false)
+                .reagendado(false)
                 .build();
 
         vueloRepo.save(vuelo);
@@ -63,10 +91,13 @@ public class VueloService {
 
         return new VueloResponse(
                 vuelo.getId(),
-                origen.getIcaoCode(),
-                destino.getIcaoCode(),
+                vuelo.getOrigen().getIcaoCode(),
+                vuelo.getDestino().getIcaoCode(),
                 vuelo.getCapacidadTotal(),
-                vuelo.getCancelled()
+                vuelo.getCancelled(),
+                vuelo.getReagendado(),
+                vuelo.getDepartureMinute(),
+                vuelo.getArrivalMinute()
         );
     }
 
@@ -135,19 +166,85 @@ public class VueloService {
         String q = query != null ? query.toUpperCase() : "";
         
         return todos.stream()
-                .filter(v -> q.isEmpty() || 
-                        v.getOrigen().getIcaoCode().contains(q) || 
-                        v.getDestino().getIcaoCode().contains(q))
+                .filter(v -> q.isEmpty()
+                        || v.getOrigen().getIcaoCode().contains(q)
+                        || v.getDestino().getIcaoCode().contains(q)
+                        || v.getId().toString().startsWith(q))
                 .map(v -> new VueloResponse(
                         v.getId(),
                         v.getOrigen().getIcaoCode(),
                         v.getDestino().getIcaoCode(),
                         v.getCapacidadTotal(),
                         v.getCancelled(),
+                        v.getReagendado(),
                         v.getDepartureMinute(),
                         v.getArrivalMinute()
                 ))
-                .limit(100)
-                .toList();
+                .limit(5000)
+                .collect(Collectors.toList());
+    }
+
+    public List<VueloResponse> uploadMasivoEnVivo(org.springframework.web.multipart.MultipartFile file) {
+        try (BufferedReader reader = new BufferedReader(new java.io.InputStreamReader(file.getInputStream()))) {
+            List<VueloResponse> responses = new ArrayList<>();
+            String linea;
+            int agregados = 0;
+
+            Map<String, Aeropuerto> aeropuertoCache = aeropuertoRepo.findAll()
+                    .stream()
+                    .collect(Collectors.toMap(Aeropuerto::getIcaoCode, a -> a));
+
+            while ((linea = reader.readLine()) != null) {
+                if (linea.trim().isEmpty()) continue;
+                
+                ParsedVuelo parsed = VueloParser.parse(linea);
+                Aeropuerto origen = aeropuertoCache.get(parsed.origenIcao());
+                Aeropuerto destino = aeropuertoCache.get(parsed.destinoIcao());
+
+                if (origen == null || destino == null) continue;
+
+                int depUtc = (parsed.departureMinute() - (origen.getGmtOffset() * 60) + 1440) % 1440;
+                int arrUtc = (parsed.arrivalMinute() - (destino.getGmtOffset() * 60) + 1440) % 1440;
+                boolean intercontinental = !origen.getContinent().equals(destino.getContinent());
+
+                Vuelo vuelo = Vuelo.builder()
+                        .origen(origen)
+                        .destino(destino)
+                        .capacidadTotal(parsed.capacidad())
+                        .departureMinute(depUtc)
+                        .arrivalMinute(arrUtc)
+                        .intercontinental(intercontinental)
+                        .cancelled(false)
+                        .reagendado(false)
+                        .build();
+
+                vuelo = vueloRepo.save(vuelo);
+                
+                responses.add(new VueloResponse(
+                        vuelo.getId(),
+                        origen.getIcaoCode(),
+                        destino.getIcaoCode(),
+                        vuelo.getCapacidadTotal(),
+                        vuelo.getCancelled(),
+                        vuelo.getReagendado(),
+                        vuelo.getDepartureMinute(),
+                        vuelo.getArrivalMinute()
+                ));
+                
+                try {
+                    simulationService.inyectarVueloEnVivo(vuelo);
+                } catch(Exception ignored) {}
+                
+                agregados++;
+            }
+            return responses;
+        } catch (Exception e) {
+            throw new RuntimeException("Error procesando archivo de vuelos: " + e.getMessage());
+        }
+    }
+
+    public Vuelo obtenerVuelo(Long id) {
+        return vueloRepo.findById(id)
+                .orElseThrow(() -> new RuntimeException("Vuelo no encontrado: " + id));
     }
 }
